# keyclock-example

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/infrastructure/: app_setup.rs  keyclock_client.rs  mod.rs
src/middleware/: auth.rs
src/presentation/handlers/: auth_handler.rs  mod.rs  protected_handlers.rs
src/presentation/shared/: app_state.rs
src/templates/: callback.html
