[package]
name = "keyclock-example"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-middleware-keycloak-auth = "0.5.0"
dotenv = "0.15.0"
openssl-sys = { version = "0.9.108", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
urlencoding = "2.1.3"
